# GTrace

./: .clang-format  .gitignore  CMakeLists.txt  ConsoleApp.cpp  Errors.h  FileUtils.cpp  FileUtils.h  GTraceApp.cpp  GTraceApp.h  GTraceMainWindow.cpp  GTraceMainWindow.h  Gtrace.sln  Gtrace.vcxproj  HeapAligned.h  HeapAlocated.h  Logger.cpp  Logger.h  MemoryBench.cpp  MemoryBench.h  Random.h  Ref.h  StringUtils.h  Threaded.h  UniqueBuffer.h  build.py  cmake_clean_cache
GtraceApp/: CMakeLists.txt  Events.cpp  Events.h  GTraceApp.cpp  GTraceApp.h  GtraceApp.vcxproj
GtraceConsole/: CMakeLists.txt  ConsoleApp.cpp  GtraceConsole.vcxproj
GtraceLib/: CMakeLists.txt  Errors.h  FileUtils.cpp  FileUtils.h  GtraceLib.vcxproj  HeapAligned.h  Logger.cpp  Logger.h  MemoryBench.cpp  MemoryBench.h  Random.h  Ref.h  Sampling.cpp  Sampling.h  Singleton.h  StringUtils.h  Threaded.h
GtraceLib/camera/: Camera.h  OrthogonalCamera.cpp  OrthogonalCamera.h  PinholeCamera.cpp  PinholeCamera.h
GtraceLib/common/: Color.h  Common.cpp  Common.h  Errors.h  HeapAligned.h  Intersection.h  Logger.cpp  Logger.h  MemoryTracker.cpp  MemoryTracker.h  NonCopyable.h  Random.h  Ray.h  Threaded.cpp  Threaded.h
GtraceLib/data_processing/: ColorToPixelProcessor.h  DataProcessor.h  LinearScaleProcessor.h
GtraceLib/data_structures/: DataBuffer.cpp  DataBuffer.h  KDTree.h
GtraceLib/geometry/: BBox.cpp  BBox.h  BVH.cpp  BVH.h  Bounded.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Plane.cpp  Plane.h  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
GtraceLib/integrator/: DirectLightIntegrator.cpp  DirectLightIntegrator.h  Integrator.h
GtraceLib/light/: DirectionalLight.cpp  DirectionalLight.h  Light.h
GtraceLib/material/: Material.h  MatteMaterial.cpp  MatteMaterial.h
GtraceLib/math/: Matrix4x4.h  OrthonormalBasis.cpp  OrthonormalBasis.h  Transform.h  Utils.cpp  Utils.h  Vector2f.h  Vector3f.h
GtraceLib/parser/: File.cpp  File.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  GTRFile.cpp  GTRFile.h  ObjFile.cpp  ObjFile.h  PPMFile.cpp  PPMFile.h  ParamNames.h  ParesedParams.h  ParsedParams.cpp  ParsedParams.h  ParsingStrings.cpp  ParsingStrings.h  StringUtils.h
GtraceLib/perf/: PerformaceProfiler.h  PerformanceStat.cpp  PerformanceStat.h
GtraceLib/reflection/: BSDF.cpp  BSDF.h  BxDF.cpp  BxDF.h  Fresnel.cpp  Fresnel.h  FresnelNoOp.h  Lambertian.h  Specular.cpp  Specular.h  SpecularReflection.cpp
GtraceLib/renderer/: DataBuffer.h  Renderer.cpp  Renderer.h  RendererDisplay.cpp  RendererDisplay.h  RendererOutput.cpp  RendererOutput.h  RendererStat.cpp  RendererStat.h  Scene.h
GtraceLib/scene/: Parser.cpp  Parser.h  SceneSettings.h  World.cpp  World.h
GtraceLib/scenes/: many_spheres.sc
GtraceLib/texture/: ColorTexture.h  NoiseTexture.cpp  NoiseTexture.h  SolidNoise.cpp  SolidNoise.h  Texture.h
camera/: Camera.h  OrthogonalCamera.cpp  OrthogonalCamera.h  PinholeCamera.cpp
geometry/: BBox.cpp  BBox.h  BVH.cpp  BVH.h  Mesh.cpp  Mesh.h  Piramid.cpp  Piramid.h  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
light/: DirectionalLight.cpp  DirectionalLight.h  Light.h
material/: Material.h  MatteMaterial.cpp  MatteMaterial.h
math/: Matrix4x4.h  OrthonormalBasis.cpp  OrthonormalBasis.h  Transform.h  Utils.cpp  Utils.h  Vector3f.h
reflection/: BxDF.h  FresnelNoOp.h  SpecularReflection.h
renderer/: Camera.cpp  Camera.h  DataBuffer.h  Renderer.cpp  Renderer.h  RendererDisplay.cpp  RendererDisplay.h  RendererOutput.cpp  RendererOutput.h  RendererStat.cpp  RendererStat.h
scene/: Parser.cpp  Parser.h  SceneSettings.h  World.cpp  World.h
scenes/: many_spheres.sc  mesh.sc  mirror.sc  simple.sc
texture/: ColorTexture.h  NoiseTexture.cpp  SolidNoise.cpp  SolidNoise.h  Texture.h
unit_tests/: CMakeLists.txt  MeshGenerator.cpp  MeshGenerator.h  TestUtils.cpp  TestUtils.h  Utils.h  pch.cpp  test_geometry.cpp  test_math.cpp  test_ref.cpp  unit_tests.vcxproj
unit_tests/camera/: PinholeCamera_test.cpp
unit_tests/common/: MemoryTracker_test.cpp
unit_tests/data_processing/: LinearScaleProcessor_test.cpp
unit_tests/data_structures/: DataBuffer_test.cpp  KDTree_test.cpp
unit_tests/geometry/: BVH_test.cpp  Mesh_test.cpp  Plane_test.cpp  Sphere_test.cpp  Triangle_test.cpp  bbox_tests.cpp
unit_tests/google-test/: CMakeLists.txt  CMakeLists.txt.in
unit_tests/math/: Matrix4x4_test.cpp  SphericalCoordinates_test.cpp  Transform_test.cpp  Vector3f_test.cpp
unit_tests/parser/: File_test.cpp  GTRFile_test.cpp  ObjFile_test.cpp  ParsedParams_test.cpp  ParsingStrings_test.cpp
unit_tests/perf/: PerformanceProfiler_test.cpp
unit_tests/renderer/: RendererOutput_test.cpp
